# rpmemlog

./: COPYING  Doxyfile  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/html/: files.html  globals.html  globals_func.html  index.html  rpmemlog_8h-source.html  rpmemlog_8h.html
src/: Makefile.am  Makefile.in  rpmemlog.c  rpmemlog.h  test.c
